Starting with user checking

--- a/todo-0/templates/index.html
+++ b/todo-0/templates/index.html
@@ -20,5 +20,12 @@ $def with (username, userid)
     <button id="selectDoneButton">Select done</button>
     <hr>
     <script src="scripts/myscript.js"></script>
+    <hr>
+    <p>
+      <span id="loginElt">
+        Username: <input type="text" name="username" value=""> <br>
+        Password: <input type="password" name="passwd" value="">
+      </span>
+    </p>
   </body>
 </html>
