Get user list using AJAX

--- a/todo-0/templates/index.html
+++ b/todo-0/templates/index.html
@@ -19,13 +19,13 @@ $def with (username, userid)
     <button id="selectOpenButton">Select open</button>
     <button id="selectDoneButton">Select done</button>
     <hr>
-    <script src="scripts/myscript.js"></script>
-    <hr>
-    <p>
-      <span id="loginElt">
-        Username: <input type="text" name="username" value=""> <br>
+    <div>
+      <form id="loginElt">
+        Username: <input type="text" name="username" value="">
         Password: <input type="password" name="passwd" value="">
-      </span>
-    </p>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+    <script src="scripts/myscript.js"></script>
   </body>
 </html>
