Implementation with jQuery-ajax functions

--- a/todo-1/templates/index.html
+++ b/todo-1/templates/index.html
@@ -2,7 +2,8 @@ $def with (username, userid)
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Todo-0</title>
+    <title>Todo-1</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
     <h1>Todo</h1>
