--- a/les3/templates/index.html
+++ b/les3/templates/index.html
@@ -22,6 +22,8 @@
       par2: <input type="text" name="par2" value=""><br>
       send: <button type="submit">POST</button>
     </form>
+    <hr>
+    <button id="notFoundButton">Try loading not found</button>
     <script src="scripts/myscript.js"></script>
   </body>
 </html>
