--- a/les3/templates/index.html
+++ b/les3/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AJAX Les-1</title>
+    <title>AJAX Les-3</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Les 1: AJAX</h1>
+    <h1>Les 3: jQuery</h1>
 
     <div>
       AJAX HTTP echo request:<br>
