Small corrections to lesson 2

--- a/les2/templates/index.html
+++ b/les2/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AJAX Les-1</title>
+    <title>AJAX Les-2</title>
   </head>
   <body>
-    <h1>Les 1: AJAX</h1>
+    <h1>Les 2: REST</h1>
 
     <div>
       AJAX HTTP echo request:<br>
@@ -22,6 +22,7 @@
       par2: <input type="text" name="par2" value=""><br>
       send: <button type="submit">POST</button>
     </form>
+    <hr>
     <button id="notFoundButton">Try loading not found</button>
     <script src="scripts/myscript.js"></script>
   </body>
